Install callbacks for the AVDA sync init path.

Previously, we didn't bother to install callbacks for the sync
init path for |surface_chooser_|, because there wasn't any need
for the chooser to choose anything.  However, now that we request
compositor feedback for overlay promotion, we still might ask the
chooser to choose.  When it does, it'll crash without a callback.

This CL installs the callbacks so that the chooser is in a good
state even in the sync path.  Then, it doesn't matter if we ask it
questions, since it will (correctly) answer "use SurfaceTexture".
It also adds a check to the appropriate unit test.

Bug: 772899, 772613
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ie0eb6bf5febcdb21119b734d3f2483e4d5aa9d70
Reviewed-on: https://chromium-review.googlesource.com/706250
Commit-Queue: Frank Liberato <liberato@chromium.org>
Reviewed-by: Thomas Guilbert <tguilbert@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507441}
Former-commit-id: 4eac801c067dde1b0bc13555c9a793aa040a48c7